# Sentiment-Analysis

./: README.md  pyproject.toml
src/reddit_analysis/: subreddit_sentiment.py
src/reddit_analysis/io/: loaders.py
tests/: test_json.json  test_subreddit_sentiment.py
tests/io/: test_loaders.py
