[tool.poetry]
name = "Sentiment Analysis"
version = "0.0.1"
description = ""
authors = ["JohN100x1 <JohN100x1@hotmail.co.uk>"]

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
praw = "^7.6.0"
tensorflow = "^2.11.0"
scikit-learn = "^1.2.0"

[tool.poetry.dev-dependencies]
black = "^22"
isort = "^5"
pytest = "^7"
pytest-mock = "^3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "src"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
